--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "fastclick": "^1.0.6",
     "home": "^2.0.0",
     "vue": "^2.6.11",
